--- a/mypath/pubspec.yaml
+++ b/mypath/pubspec.yaml
@@ -11,6 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^0.1.3
+
+  package:
+    git:
+      url: git@github.com:bitrise-io/sample-apps-flutter-ios-android-package.git
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
